fixed Top Prediction Card too big and PridictionStrip text bugs

--- a/src/pages/Detail/PredictionStrip/PredictionStrip.css
+++ b/src/pages/Detail/PredictionStrip/PredictionStrip.css
@@ -12,8 +12,7 @@
    font-family: var(--text-font);
    color: black;
    border-radius: 3px;
-   padding: 15px 0;
-   padding-left: 15px;
+   padding: 10px 15px;
    animation: animation_fade 1s;
 }
 
